<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">week2-rw-views</string>
    <string name="action_settings">Settings</string>
    <string name="message">Guess the Magic word:</string>
    <string name="hint">write here</string>
    <string name="btsubmit">submit</string>
    <string name="btclear">clear</string>
    <string name="btshow">new activity</string>
    <string name="grumpy">Grumpy Cat</string>
    <string name="resultheader">You Typed:</string>
    <string name="emptymsg">Nothing entered</string>
    <string name="successmsg">You Got It !!!</string>
    <string name="tryagainmsg">Try again!</string>
    <string name="title_activity_activity2">Activity2</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_weight_linear_layout">WeightLinearLayout</string>
    <string name="explain">The only purpose for this code is to show the effect of using the android:layout_weight attribute in Linear Layouts.  See the xml in the layout file.</string>
    <string name="btshowLL">another new activity</string>

</resources>